Fix banner dimissal spacing

--- a/resources/assets/css/components/pieces/top_banner.less
+++ b/resources/assets/css/components/pieces/top_banner.less
@@ -31,8 +31,8 @@
             .banner-dismiss {
                 cursor: pointer;
                 position: absolute;
-                top: 5px;
-                right: 5px;
+                top: 10px;
+                right: 10px;
             }
         }
     });
